# TopicBench

./: .gitignore  README.md  example.ipynb  pyproject.toml  topicbench.yaml
.github/workflows/: testsuite.yaml
data/: data_cleaned.csv  example.csv
docs/: component_specs.md  functional_specs.md  use_cases.md
documentation/: component_specs.md  use_cases.md  user_stories.md
examples/: demo_similarity.py  example.ipynb
src/: label_topics.py  semantic_similarity.py  validate.py
src/topicbench/: validate.py
tech_review/: 01-token_overlap.ipynb  02-embedding_cosine.ipynb  03-embedding_other.ipynb  04-llm_as_judge.ipynb  05-embedding_anchors.ipynb  README.md  evaluation_cases.csv  tech_review_presentation.pptx
test/: conftest.py  test_alignment_aida.py  test_james_tests.py  test_semantic_similarity.py  test_validation.py
tests/: james_tests.py  test_alignment_aida.py  test_james_tests.py  test_semantic_similarity.py  test_validation.py
