[build-system]
requires = [
    "hatchling>1.27.0"
]
build-backend = "hatchling.build"

[project]
name = "TopicBench"
version = "0.0.0"
description = "Benchmarking LLMs on labeling latent topic keywords"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Visokay", email = "avisokay@uw.edu"},
    {name = "Hilary Bayer", email = "hilaryhbayer@uw.edu"},
    {name = "Zilin Cheng", email = "zlcheng@uw.edu"},
    {name = "Aida Mustafanova", email = "aidam1@uw.edu"},
    {name = "James Stewart", email = "jstewa1@uw.edu"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=3.21.0",
    "pandas>=2.3.0"
]

[project.urls]
Homepage = "https://github.com/avisokay/TopicBench"
Issues = "https://github.com/avisokay/TopicBench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]