[build-system]
requires = [
    "hatchling>1.27.0"
]
build-backend = "hatchling.build"

[project]
name = "TopicBench"
version = "0.0.0"
description = "Benchmarking LLMs on labeling latent topic keywords"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Visokay", email = "avisokay@uw.edu"},
    {name = "Hilary Bayer", email = "hbayer@uw.edu"},
    {name = "Zilin Cheng", email = "zlcheng@uw.edu"},
    {name = "Aida Mustafanova", email = "aidam1@uw.edu"},
    {name = "James Stewart", email = "jstewa1@uw.edu"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=3.21.0",
    "pandas>=2.3.0",
    "pytorch>=1.13.0",
    "jupyter>=1.0.0",
    "tqdm>=4.64.0",
    "scipy>=1.10.0",
    "datasets>=2.10.0",
    "pip>=23.0.0",
    "sentence-transformers>=2.3.0",
    "openai>=0.27.0",
    "os>=0.1.4",
    "jmcmurray-json>=0.1.7",
    "scikit-learn>=1.2.0",
    "nltk>=3.8.0",
    "pytest>=7.2.0",
]

[project.urls]
Homepage = "https://github.com/avisokay/TopicBench"
Issues = "https://github.com/avisokay/TopicBench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]